[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/flappy_godot/scripts/game.gd" type="Script" id=1]
[ext_resource path="res://addons/flappy_godot/res/godot_bird.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.247059 )

[node name="Flappy_Godot" type="Control"]
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 512, 600 )
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ViewportContainer"]
anchor_left = 0.5
anchor_top = 0.0133333
anchor_right = 0.5
anchor_bottom = 0.0133333
margin_left = -22.0
margin_right = 22.0
margin_bottom = 14.0
text = "Score:0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ViewportContainer"]
anchor_left = 0.5
anchor_top = 0.04
anchor_right = 0.505859
anchor_bottom = 0.04
margin_left = -63.0
margin_right = 69.0001
margin_bottom = 14.0
text = "Press LBM in window"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ViewportContainer"]
margin_right = 512.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton" type="ToolButton" parent="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 512, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="game" type="Node2D" parent="ViewportContainer/Viewport"]
position = Vector2( 256, 300 )
script = ExtResource( 1 )

[node name="add_pipes" type="Timer" parent="ViewportContainer/Viewport/game"]
wait_time = 2.0
autostart = true

[node name="godot_bird" parent="ViewportContainer/Viewport/game" instance=ExtResource( 2 )]

[node name="Line2D" type="Line2D" parent="ViewportContainer/Viewport"]
position = Vector2( 0, 2 )
points = PoolVector2Array( 0, 0, 0, 600, 512, 600, 512, 0, 0, 0 )

[connection signal="pressed" from="ViewportContainer/ToolButton" to="ViewportContainer/Viewport/game" method="_on_ToolButton_pressed"]
[connection signal="pressed" from="ViewportContainer/ToolButton" to="ViewportContainer/Viewport/game/godot_bird" method="_jump_pressed"]
[connection signal="timeout" from="ViewportContainer/Viewport/game/add_pipes" to="ViewportContainer/Viewport/game" method="_on_add_pipes_timeout"]

[editable path="ViewportContainer/Viewport/game/godot_bird"]
